[package]
name = "easy_totp"
version = "0.1.2"
edition = "2024"
authors = ["Jonathan A. McCormick, Jr."]
license = "MIT"
homepage = "https://github.com/JonathanMcCormickJr/easy_totp"
repository = "https://github.com/JonathanMcCormickJr/easy_totp"
documentation = "https://github.com/JonathanMcCormickJr/easy_totp"
description = "TOTP in Rust, but with just a few simple functions to call."

[dependencies]
base64 = "0.13.0"
image = "0.25"
png = "0.17.16"
rqrr = "0.10.0"

[dependencies.totp-rs]
version = "^5.3"
features = ["qr"]