[package]
name = "easy_totp"
version = "0.3.2"
edition = "2024"
authors = ["Jonathan A. McCormick, Jr."]
license = "MIT"
homepage = "https://github.com/JonathanMcCormickJr/easy_totp"
repository = "https://github.com/JonathanMcCormickJr/easy_totp"
documentation = "https://docs.rs/easy_totp/latest/easy_totp/"
description = "TOTP in Rust, but with just a few simple functions to call."

[dependencies]
base64 = "0.22.1"
image = "0.25.8"
png = "0.18.0"
rqrr = "0.10.0"

[dependencies.totp-rs]
version = "^5.3"
features = ["qr"]